# esp32-berry-lang

./: .gitignore  README.md  partitions.csv
components/berry/: CMakeLists.txt  gen.sh
components/berry/berry_ctypes/src/: be_ctypes.c
components/berry/berry_mapping/src/: be_const_members.c
components/berry/generate/: be_const_strtab.h  be_const_strtab_def.h
components/berry/port/: be_modtab.c  be_port.c  be_portutils.c  be_portutils.h  berry_conf.h
components/internals/: CMakeLists.txt  internals.h
components/internals/esp32/: littlefs.c  tftp_server.c  wifi.c
components/internals/esp32/include/: littlefs.h  tftp_server.h  wifi.h
main/: CMakeLists.txt  main.c
